<resources>
    <string name="_1_stream">1-STREAM</string>
    <string name="_downloads">DOWNLOADS</string>
    <string name="_local_storage">ARMAZENAMENTO LOCAL</string>
    <string name="_subscription">ASSINATURA</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Sobre Nós</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="add_m3u_playlist">Adicionar Playlist M3U</string>
    <string name="add_playlist">ADICIONAR PLAYLIST</string>
    <string name="add_user">ENTRAR</string>
    <string name="add_video">ADICIONAR VÍDEO</string>
    <string name="added_success">Adicionado com sucesso</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adults_content">Conteúdo adulto</string>
    <string name="already_download">Já Baixado</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_name">Qualquer nome</string>
    <string name="app_name">Imperius</string>
    <string name="app_theme">Tema do App</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_tracks">Faixas de Áudio</string>
    <string name="authentication_required">Authentication required</string>
    <string name="auto_reload_data">Atualização Automática de Canais, Filmes e Séries a cada</string>
    <string name="auto_update_live">Atualizar Canais Automaticamente</string>
    <string name="auto_update_movies">Atualizar Filmes Automaticamente</string>
    <string name="auto_update_series">Atualizar Séries Automaticamente</string>
    <string name="automation">Automação</string>
    <string name="autoplay_next_episode">Auto reproduzir próximo episódio</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browse">PROCURAR</string>
    <string name="by_using_this_application">Ao usar este aplicativo, você concorda com os</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancelar</string>
    <string name="card_connections">Conexões</string>
    <string name="card_holder_name">Nome do titular</string>
    <string name="cast">Elenco:</string>
    <string name="catch_up_home">REPLAY</string>
    <string name="categories">Categorias</string>
    <string name="categories_reverse_order">Lista de Categorias em Ordem Reversa</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_multi_screen_layout">Escolher Layout Multi Tela</string>
    <string name="clear_cache">Limpar Cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="company">Empresa</string>
    <string name="contact">Contato</string>
    <string name="date_time">Data e hora</string>
    <string name="default_api_key">defaultApiKey</string>
    <string name="default_application_id">defaultApplication</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_product_id">defaultProductID</string>
    <string name="default_todo">TODO</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete">Excluir</string>
    <string name="developer_mode">Modo Desenvolvedor</string>
    <string name="directed_by">Direção:</string>
    <string name="do_it_now">ATUALIZAR AGORA</string>
    <string name="downloaded">Baixado</string>
    <string name="downloading">Baixando</string>
    <string name="downloads">Downloads</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="duration">Duração:</string>
    <string name="email">Email</string>
    <string name="encrypted_data_security">Segurança de Dados Criptografados de Ponta a Ponta</string>
    <string name="enter_login_details">Digite Seu Acesso</string>
    <string name="envato_market">envatoMarket</string>
    <string name="err_cannot_empty">O campo não pode estar vazio</string>
    <string name="err_cannot_use_features">Não é possível usar alguns recursos sem a permissão necessária</string>
    <string name="err_connect_net_try">Conecte-se à internet e tente novamente</string>
    <string name="err_file_invalid">Seu arquivo é inválido</string>
    <string name="err_internet_not_connected">Por favor, conecte-se à internet</string>
    <string name="err_login_not_incorrect">Dados de login incorretos</string>
    <string name="err_no_data_found">Nenhum dado encontrado</string>
    <string name="err_no_episodes_found">Nenhum episódio encontrado</string>
    <string name="err_pass_end_space">Por favor, não adicione espaço no final</string>
    <string name="err_password">Senha incorreta. Tente novamente.</string>
    <string name="err_password_sort">Senha muito curta</string>
    <string name="err_server_error">Erro no servidor</string>
    <string name="err_server_not_connected">Servidor não conectado</string>
    <string name="err_unauthorized_access">Acesso não autorizado</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_category_list">Infelizmente, não há conteúdo nesta categoria</string>
    <string name="error_cpassword">Digite a confirmação da senha</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_no_radio_selected">nenhuma rádio selecionada</string>
    <string name="error_old_pass_not_match">Senha antiga não confere</string>
    <string name="error_old_password">Digite a senha antiga</string>
    <string name="error_pass_end_space">Por favor, não adicione espaço no final</string>
    <string name="error_pass_not_match">Confirmação de senha não confere</string>
    <string name="error_password">Digite a senha</string>
    <string name="exit">Sair</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="feedback">Feedback</string>
    <string name="general_setting">Configuração Geral</string>
    <string name="list_users">LISTAR USUÁRIOS</string>
    <string name="no_users_to_list_yet">Nenhum usuário listado ainda</string>
    <string name="please_describe_the_problem">Descreva o problema…</string>
    <string name="recently_added_limit_live_tv">Limite de Recentes (Canais Ao Vivo)</string>
    <string name="recently_added_limit_movie_series">Limite de Recentes (Filmes, Séries)</string>
    <string name="save">SALVAR</string>
    <string name="set_playlist_agent">Definir Agente da Playlist</string>
    <string name="splash_screen_music">Música na Tela de Abertura</string>
    <string name="submit">Enviar</string>
    <string name="terms_and_conditions">Termos e Condições</string>
    <string name="todo">TODO</string>
    <string name="user_list_any_name">nemosofts</string>
    <string name="user_list_url">URL:</string>
    <string name="user_list_user_name">Usuário:</string>
    <string name="you_haven_created_any_user">Você ainda não criou nenhum usuário.</string>
</resources>