<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/_15sdp" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center" android:layout_width="@dimen/_50sdp" android:layout_height="@dimen/_50sdp" android:src="@drawable/ic_user_add" android:contentDescription="@string/todo" app:tint="@color/white" />
    <TextView android:textSize="@dimen/_11ssp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_empty_msg_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_users_to_list_yet" />
    <TextView android:textSize="@dimen/_9ssp" android:textColor="#b0dbdbdb" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_empty_msg_sub" android:layout_width="@dimen/_150sdp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_3sdp" android:text="@string/you_haven_created_any_user" />
</LinearLayout>