<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/theme_bg" android:background="@drawable/bg_dark" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/_15sdp" android:paddingEnd="@dimen/_15sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_top" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/_5sdp" android:layout_weight="0.3">
        <ImageView android:id="@id/iv_app_logo" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/logo" android:layout_centerVertical="true" android:contentDescription="@string/todo" app:hv_corner_radius="@dimen/_3sdp" />
        <TextView android:textSize="@dimen/_16ssp" android:textColor="@color/white" android:id="@id/iv_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_centerVertical="true" android:layout_marginStart="@dimen/_10sdp" android:layout_toEndOf="@id/iv_app_logo" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/rl_center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:baselineAligned="false" android:layout_weight="2.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_list" android:background="@drawable/bg_card_sub" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_10sdp" android:backgroundTint="@color/white" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.2">
        <TextView android:textSize="@dimen/_10ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/by_using_this_application" />
        <TextView android:textSize="@dimen/_10ssp" android:textColor="?ns_primary" android:id="@id/tv_terms" android:background="@drawable/focused_img_selector" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions" android:textAlignment="center" android:paddingStart="@dimen/_5sdp" android:paddingEnd="@dimen/_5sdp" android:layout_marginStart="@dimen/_3sdp" android:layout_marginEnd="@dimen/_5sdp" />
    </LinearLayout>
</LinearLayout>