<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/ll_single_list" android:background="@drawable/focused_bg_card_selector" android:padding="@dimen/_5sdp" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="@dimen/_50sdp" android:layout_margin="@dimen/_5sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="@dimen/_40sdp" android:layout_height="fill_parent">
        <ImageView android:id="@id/iv_color_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@color/color_setting_1" app:hv_border_color="@color/md_border" app:hv_border_width="@dimen/_1sdp" app:hv_corner_radius="@dimen/_5sdp" />
        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/_5sdp" android:src="@drawable/ic_play" android:contentDescription="@string/todo" app:tint="@color/white" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="@dimen/_5sdp" android:layout_marginEnd="@dimen/_5sdp">
        <TextView android:textSize="@dimen/_10ssp" android:textStyle="bold" android:textColor="@color/md_title" android:id="@id/tv_any_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_list_any_name" android:maxLines="2" />
        <TextView android:textSize="@dimen/_8ssp" android:textColor="@color/md_title_sub" android:id="@id/tv_video_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/user_list_url" android:lines="1" />
    </LinearLayout>
</LinearLayout>