<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/theme_bg" android:background="@drawable/bg_dark" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/_15sdp" android:paddingEnd="@dimen/_15sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_top" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/_5sdp" android:layout_weight="0.3">
        <ImageView android:id="@id/iv_back_page" android:background="@drawable/focused_img_selector" android:padding="@dimen/_5sdp" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="@dimen/_33sdp" android:layout_height="@dimen/_33sdp" android:src="@drawable/ic_player_back" android:scaleType="centerCrop" android:layout_centerVertical="true" android:contentDescription="@string/todo" android:layout_marginEnd="@dimen/_10sdp" android:layout_alignParentStart="true" app:tint="@color/white" />
        <ImageView android:id="@id/iv_app_logo" android:padding="@dimen/_4sdp" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/ic_setting" android:layout_centerVertical="true" android:contentDescription="@string/todo" android:layout_toEndOf="@id/iv_back_page" />
        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/general_setting" android:layout_centerVertical="true" android:layout_marginStart="@dimen/_10sdp" android:layout_toEndOf="@id/iv_app_logo" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_btn_save" android:background="@drawable/focused_save_btn" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <ImageView android:id="@id/tv_save" android:padding="@dimen/_7sdp" android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/ic_save" android:scaleType="centerCrop" android:contentDescription="@string/todo" app:tint="@color/white" />
            <ProgressBar android:id="@id/pb_save" android:padding="@dimen/_6sdp" android:visibility="gone" android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_30sdp" android:indeterminate="true" android:indeterminateTint="@color/white" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_marginEnd="@dimen/_10sdp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/bg_card_sub" android:layout_width="fill_parent" android:layout_height="0.0dip" android:baselineAligned="false" android:layout_weight="2.0" android:backgroundTint="@color/white">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.core.widget.NestedScrollView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.6">
                <LinearLayout android:orientation="vertical" android:padding="@dimen/_20sdp" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <CheckBox android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/cbox_autoplay_episode" android:background="@drawable/focused_edt" android:padding="@dimen/_6sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoplay_next_episode" />
                    <CheckBox android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/cbox_cat_reverse" android:background="@drawable/focused_edt" android:padding="@dimen/_6sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="@string/categories_reverse_order" />
                    <LinearLayout android:gravity="center" android:id="@id/ll_recently_movie" android:background="@drawable/focused_edt" android:padding="@dimen/_5sdp" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp">
                        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recently_added_limit_movie_series" />
                        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/tv_add_recently_movie" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_2sdp" />
                        <ImageView android:layout_width="@dimen/_25sdp" android:layout_height="@dimen/_20sdp" android:src="@drawable/ic_round_arrow_down" android:contentDescription="@string/todo" app:tint="@color/white" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:id="@id/ll_recently_live" android:background="@drawable/focused_edt" android:padding="@dimen/_5sdp" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp">
                        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recently_added_limit_live_tv" />
                        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/tv_add_recently_live" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_2sdp" />
                        <ImageView android:layout_width="@dimen/_25sdp" android:layout_height="@dimen/_20sdp" android:src="@drawable/ic_round_arrow_down" android:contentDescription="@string/todo" app:tint="@color/white" />
                    </LinearLayout>
                    <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_marginBottom="@dimen/_3sdp" android:text="@string/set_playlist_agent" android:layout_marginStart="@dimen/_5sdp" android:layout_marginEnd="@dimen/_3sdp" />
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_edit_text" android:layout_width="@dimen/_240sdp" android:layout_height="wrap_content" android:layout_marginStart="@dimen/_5sdp">
                        <ImageView android:padding="@dimen/_7sdp" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/ic_profile" android:contentDescription="@string/todo" app:tint="@color/white" />
                        <EditText android:textSize="@dimen/_10ssp" android:textColor="@color/white" android:textColorHint="@color/white" android:id="@id/et_agent" android:background="@drawable/focused_edit_text" android:padding="@dimen/_5sdp" android:nextFocusDown="@id/tv_add_video_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/app_name" android:maxLines="1" android:inputType="text" android:imeOptions="actionDone|flagNoFullscreen" android:textAlignment="viewStart" android:layout_marginEnd="@dimen/_3sdp" android:importantForAutofill="no" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
            <View android:background="#12ffffff" android:layout_width="@dimen/_1sdp" android:layout_height="fill_parent" android:layout_marginTop="@dimen/_1sdp" android:layout_marginBottom="@dimen/_1sdp" android:backgroundTint="@color/white" />
            <LinearLayout android:orientation="vertical" android:padding="@dimen/_20sdp" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <CheckBox android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/cbox_splash_audio" android:background="@drawable/focused_edt" android:padding="@dimen/_6sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/splash_screen_music" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>