<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_users_list" android:background="@drawable/focused_bg_card_selector" android:padding="@dimen/_5sdp" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="@dimen/_50sdp" android:layout_margin="@dimen/_5sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="@dimen/_40sdp" android:layout_height="fill_parent" android:src="@drawable/user_photo" app:hv_border_color="@color/md_border" app:hv_border_width="@dimen/_1sdp" app:hv_corner_radius="@dimen/_3sdp" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="@dimen/_5sdp" android:layout_marginEnd="@dimen/_5sdp">
            <TextView android:textSize="@dimen/_10ssp" android:textStyle="bold" android:textColor="@color/md_title" android:id="@id/tv_users_any_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_list_any_name" android:lines="1" />
            <TextView android:textSize="@dimen/_8ssp" android:textColor="@color/md_title_sub" android:id="@id/tv_users_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_list_user_name" android:lines="1" />
            <TextView android:textSize="@dimen/_8ssp" android:textColor="@color/md_title_sub" android:id="@id/tv_users_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_list_url" android:lines="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>