<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/theme_bg" android:background="@drawable/bg_dark" android:paddingTop="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/_15sdp" android:paddingEnd="@dimen/_15sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_top" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/_5sdp" android:layout_weight="0.4">
        <ImageView android:id="@id/iv_app_logo" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/ic_user_octagon" android:layout_centerVertical="true" android:contentDescription="@string/todo" app:tint="@color/white" />
        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/list_users" android:layout_centerVertical="true" android:layout_marginStart="@dimen/_10sdp" android:layout_toEndOf="@id/iv_app_logo" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_user_add" android:background="@drawable/focused_save_btn" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <ImageView android:id="@id/tv_save" android:padding="@dimen/_7sdp" android:layout_width="@dimen/_35sdp" android:layout_height="@dimen/_30sdp" android:src="@drawable/ic_user_add" android:scaleType="centerCrop" android:contentDescription="@string/todo" app:tint="@color/white" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_user" android:layout_marginEnd="@dimen/_10sdp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/rl_center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:baselineAligned="false" android:layout_weight="3.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv" android:paddingBottom="@dimen/_20sdp" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <FrameLayout android:id="@id/fl_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="?actionBarSize" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>